# speech-audio-tools

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: rebuild_number_audio.py
src/speech_audio_tools/: add_number.py  audio.py  beep.py  change_speed.py  cli.py  join_audio.py  split_audio.py  tag_album.py  transcribe_aws.py  transcribe_openai.py  trim_audio.py  trim_silence.py  tts.py
tests/: test_sat_offline.py  test_transcribe_aws.py  test_transcribe_openai.py
